Fri May 19 17:53:51 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.cpp:

          Fixed a defect in process_directive () which was replacing the
          ENOSPC errno with EINVAL. Added #ifndef ACE_NLOGGING / #endif
          around logging statements.

        * ace/Service_Repository.cpp:

          Minor reformating.

        * tests/Service_Config_DLL.cpp:

          Added two independent service objects, to be used in the
          testLimits test. See testLimits().

        * tests/Service_Config_Test.cpp:

          Reworked the testLimits() to avoid printing the word "error",
          which confuses the test driver into thinking the test failed.

Fri May 19 17:51:33 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:

          Elminated memory leak found by valgrind.

Fri May 19 17:09:51 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Service_Config_Test.cpp:

          Fixed a warning due to assignment of a string literal to a
          non-const variable.

Thu May 18 17:42:09 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/diff-builds.pl:

          Contributing a little tool to find the difference in the failing
          tests between two dates, on the same build. Or between two
          builds, on a particular date. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for mining and hosting the data used by
          this script.

Thu May 18 17:33:57 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Changed feature test for socklen_t to #include <sys/types.h>
          before <sys/socket.h>.  Use cannonical AC_CHECK_TYPE and
          AC_DEFINE with a third argument instead of a AH_TEMPLATE for
          ACE_HAS_SOCKLEN_T.  Fixes configuration on OpenBSD.  Thanks to
          Vladimir Panov <gbr at voidland dot org> for reporting this bug.
