@@ -110,6 +110,10 @@ PAGE_NOCACHE  */
 #   define MS_SYNC 0x0
 # endif /* !MS_SYNC */
 
+#if !defined (ACE_LACKS_MADVISE) && defined (ACE_LACKS_MADVISE_PROTOTYPE)
+  extern "C" int madvise(caddr_t, size_t, int);
+#endif /* !ACE_LACKS_MADVISE && ACE_LACKS_MADVISE_PROTOTYPE */
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
